[USER] created sidebar, home, and cases screens.

--- a/vawc-deskhub/src/index.css
+++ b/vawc-deskhub/src/index.css
@@ -6,6 +6,24 @@
   font-style: normal;
 }
 
+.libre-baskerville-regular {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.libre-baskerville-bold {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.libre-baskerville-regular-italic {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
 button {
   border-radius: full;
   border: 1px solid transparent;
@@ -24,4 +42,13 @@ button {
 
 ::placeholder{
   font-size: small;
+}
+
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
 }
